tests/neg-custom-args/captures/capt-depfun.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capt-depfun.scala:11:43 ----------------------------------
11 |  val dc: ((Str^{y, z}) => Str^{y, z}) = ac(g()) // error
   |                                         ^^^^^^^
   |                                         Found:    Str^{} ->{ac*} Str^{y, z}
   |                                         Required: Str^{y, z} => Str^{y, z}
   |
   |                                         Note that capability `y` cannot flow into capture set {}.
   |
   |                                         where:    => refers to a root capability in the type of value dc
   |
   | longer explanation available when compiling with `-explain`
